Добавляет блок тренажерного зала

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -28,7 +28,7 @@ $grey: #495a7d;
 @mixin h2 {
   margin-top: 0;
   margin-bottom: 0;
-  color: $main-dark-blue;
+  color: $text-color;
   font-family: $bebas;
   font-size: 49px;
   font-weight: 700;
