Добавляет блок абонементы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,6 @@
 @import "blocks/page-header.scss";
 @import "blocks/hero.scss";
 @import "blocks/gym.scss";
+@import "blocks/gym-memberships.scss";
+@import "blocks/tab-header.scss";
+@import "blocks/tab-content.scss";
