--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,7 @@ $blueDark: #103aae;
 $blueExtra: #1c3374;
 $text-color: #102654;
 $grey: #495a7d;
+$bg-grey: #f8f9fc;
 
 @mixin tablet {
   @media screen and (max-width: 1199px) {
