--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,5 @@
 @import "blocks/gym-memberships.scss";
 @import "blocks/tab-header.scss";
 @import "blocks/tab-content.scss";
+@import "blocks/competition.scss";
+@import "blocks/promo";
