--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,7 @@ $bebas: "Bebas Neue", "Arial", sans-serif;
 $white: #ffffff;
 $black: #000;
 $red: #ed0233;
+$promo-bg: #ed0233;
 $blue: #003eb7;
 $blueDark: #103aae;
 $blueExtra: #1c3374;
