--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/hero.scss";
 @import "blocks/gym.scss";
+@import "blocks/gym-membership-wrapper.scss";
 @import "blocks/gym-memberships.scss";
 @import "blocks/tab-header.scss";
 @import "blocks/tab-content.scss";
