--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,5 @@
 @import "blocks/tab-content.scss";
 @import "blocks/competition.scss";
 @import "blocks/promo";
+@import "blocks/coaches-slider.scss";
+@import "blocks/coach.scss";
