Добавляет блок преимуществ

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,5 @@
 @import "blocks/promo";
 @import "blocks/coaches-slider.scss";
 @import "blocks/coach.scss";
+@import "blocks/advantages.scss";
+@import "blocks/advantage-item.scss";
