--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -93,10 +93,11 @@
 .coach__achievements {
     display: flex;
     flex-direction: column;
-    padding-left: 28px;
+    padding-left: 15px;
     font-family: $roboto;
     font-size: 14px;
     line-height: 21px;
+    overflow: hidden;
 
     @include mobile {
       padding-left: 20px;
@@ -104,11 +105,13 @@
 
     li {
       margin-bottom: 13px;
+      list-style-type: disc;
     }
 }
 
 .coach__image {
     height: 294px;
+    background-color: #B8C1D3;
 
     img {
     height: 294px;
