Добавляет блок акции

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,4 @@
 @import "blocks/coach.scss";
 @import "blocks/advantages.scss";
 @import "blocks/advantage-item.scss";
+@import "blocks/promotions.scss";
