--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -14,8 +14,7 @@
     }
 
     @include mobile {
-      padding-top: 70px;
-      padding-bottom: 27px;
+      padding: 70px 0 27px;
     }
 
         h2 {
