--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,4 @@
 @import "blocks/advantages.scss";
 @import "blocks/advantage-item.scss";
 @import "blocks/promotions.scss";
+@import "blocks/comment-slider.scss";
