Добавляет блок контакты

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,6 @@
 @import "blocks/advantage-item.scss";
 @import "blocks/promotions.scss";
 @import "blocks/comment-slider.scss";
+@import "blocks/contact-wrapper.scss";
+@import "blocks/promo-lesson.scss";
+@import "blocks/contacts.scss";
