--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,3 +23,4 @@
 @import "blocks/contact-wrapper.scss";
 @import "blocks/promo-lesson.scss";
 @import "blocks/contacts.scss";
+@import "blocks/page-footer.scss";
