--- a/source/sass/blocks/coaches-slider.scss
+++ b/source/sass/blocks/coaches-slider.scss
@@ -11,7 +11,7 @@
     }
 
     @include mobile {
-      padding-top: 29px;
+      padding-top: 26px;
       padding-bottom: 70px;
     }
 
@@ -37,13 +37,32 @@
 
 .coaches-slider__button {
     position: absolute;
-    bottom: 132px;
+    bottom: 130px;
     padding-left: 0;
     padding-right: 0;
     width: 18px;
     height: 32px;
+    border-radius: 3px;
     background: url("../img/icons/arrow.svg");
     cursor: pointer;
+    outline: none;
+    
+    &:hover,
+    &focus {
+      position: absolute;
+      bottom: 130px;
+      padding-left: 0;
+      padding-right: 0;
+      width: 18px;
+      height: 32px;
+      background: url("../img/icons/arrow-blue.svg");
+
+      @include mobile {
+        width: 14px;
+        height: 22px;
+        bottom: 126px;
+      }
+    }
 
     @include mobile {
       width: 14px;
@@ -52,8 +71,12 @@
     } 
 
     &:first-of-type {
-      left: -35px;
+      left: -55px;
       transform: rotate(180deg);
+
+      @include tablet {
+       left: -60px;
+      }
 
       @include mobile {
         left: -19px;
@@ -61,7 +84,11 @@
     }
 
     &:last-of-type {
-      right: -35px;
+      right: -55px;
+
+      @include tablet {
+        right: -60px;
+      }
 
       @include mobile {
         right: -19px;
