--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -15,6 +15,10 @@
   padding-top: 114px;
   padding-left: 8%;
 
+  @media screen and (max-width: 1230px){
+    padding-left: 5%;
+  }
+
   @include tablet {
     padding-top: 54px;
     padding-left: 90px;
@@ -58,11 +62,11 @@
   margin-bottom: 57px;
 
   @include tablet {
-    margin-bottom: 40px;
+    margin-bottom: 41px;
   }
 
   @include mobile {
-    margin-bottom: 42px;
+    margin-bottom: 43px;
   }
 }
 
