--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -41,7 +41,7 @@
     align-content: flex-start;
     flex-wrap: wrap;
     color: $white;
-    padding: 83px 70px 84px 78px;
+    padding: 80px 70px 84px 78px;
     width: 500px;
     background-color: $promo-bg;
 
@@ -51,12 +51,13 @@
     }
 
     @include mobile {
+      padding-top: 46px;
       padding-bottom: 343px;
       background: none;
     }
 
     h3 {
-        margin-bottom: 10px;
+        margin-bottom: 8px;
         margin-right: 48px;
         width: 201px;
         font-family: $bebas;
@@ -75,7 +76,7 @@
     }
 
     p {
-      margin-bottom: 44px;
+      margin-bottom: 45px;
       font-family: $roboto;
       font-size: 18px;
       line-height: 27px;
