--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -1,119 +1,119 @@
 .coach {
-    width: 260px;
+  width: 260px;
+  height: 294px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  transform: translateX(0);
+
+  @media screen and (max-width: 1300px) {
+    width: 240px;
+  }
+
+  @include tablet {
+    width: 268px;
     height: 294px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    transform: translateX(0);
+  }
 
-    @media screen and (max-width: 1300px) {
-      width: 240px;
-    }
-
-    @include tablet {
-      width: 268px;
-      height: 294px;
-    }
-
-    @include mobile {
-      width: 226px;
-      height: 274px;
-      margin: 0 15px;
-    }
+  @include mobile {
+    width: 226px;
+    height: 274px;
+    margin: 0 15px;
+  }
 }
 
 .coach__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  position: absolute;
+  padding-top: 57px;
+  padding-right: 42px;
+  padding-left: 44px;
+  padding-bottom: 20px;
+  width: 260px;
+  height: 294px;
+
+  @media screen and (max-width: 1300px) {
+    padding-top: 47px;
+    padding-left: 32px;
+    padding-right: 34px;
+    width: 240px;
+  }
+
+  @include tablet {
     padding-top: 57px;
-    padding-right: 42px;
-    padding-left: 44px;
-    padding-bottom: 20px;
-    width: 260px;
-    height: 294px;
+    width: 268px;
+  }
 
-    @media screen and (max-width: 1300px) {
-      padding-top: 47px;
-      padding-left: 32px;
-      padding-right: 34px;
-      width: 240px;
+  @include mobile {
+    padding-top: 46px;
+    padding-right: 30px;
+    padding-left: 31px;
+    width: 226px;
+    height: 274px;
+  }
+
+  &:hover,
+  &:focus {
+    justify-content: flex-start;
+    background-color: rgba(16, 38, 84, 0.89);
+
+    & .coach__info-inner {
+      display: flex;
     }
+  }
 
-    @include tablet {
-      padding-top: 57px;
-      width: 268px;
-    }
-
-    @include mobile {
-      padding-top: 46px;
-      padding-right: 30px;
-      padding-left: 31px;
-      width: 226px;
-      height: 274px;
-    }
-
-    &:hover,
-    &:focus {
-      justify-content: flex-start;
-      background-color: rgba(16, 38, 84, 0.89);
-
-      & .coach__info-inner {
-        display: flex;
-      }
-    }
-
-    h3 {
-        margin-bottom: 4px;
-        color: $white;
-        font-family: $roboto;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 18px;
-        text-align: center;
-    }    
+  h3 {
+    margin-bottom: 4px;
+    color: $white;
+    font-family: $roboto;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 18px;
+    text-align: center;
+  }
 }
 
 .coach__info-inner {
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    color: $white;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  color: $white;
 
-    p {
-      margin-bottom: 37px;
-      color: #b6bdcc;
-      font-family: $roboto;
-      font-size: 16px;
-      line-height: 18px;
-      text-align: center;
-    }
+  p {
+    margin-bottom: 37px;
+    color: #b6bdcc;
+    font-family: $roboto;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+  }
 }
 
 .coach__achievements {
-    display: flex;
-    flex-direction: column;
-    padding-left: 15px;
-    font-family: $roboto;
-    font-size: 14px;
-    line-height: 21px;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  padding-left: 15px;
+  font-family: $roboto;
+  font-size: 14px;
+  line-height: 21px;
+  overflow: hidden;
 
-    @include mobile {
-      padding-left: 20px;
-    }
+  @include mobile {
+    padding-left: 20px;
+  }
 
-    li {
-      margin-bottom: 13px;
-      list-style-type: disc;
-    }
+  li {
+    margin-bottom: 13px;
+    list-style-type: disc;
+  }
 }
 
 .coach__image {
-    height: 294px;
-    background-color: #B8C1D3;
+  height: 294px;
+  background-color: #b8c1d3;
 
-    img {
+  img {
     height: 294px;
     width: 100%;
     object-fit: cover;
