--- a/source/sass/blocks/tab-header.scss
+++ b/source/sass/blocks/tab-header.scss
@@ -1,27 +1,16 @@
 .tab-header {
-    display: flex;
-    position: relative;    
-    justify-content: flex-start;
-    margin-bottom: 39px;
-    border-bottom: 2px solid rgba(120, 120, 120, 0.2);
+  display: flex;
+  position: relative;
+  justify-content: flex-start;
+  margin-bottom: 39px;
+  border-bottom: 2px solid rgba(120, 120, 120, 0.2);
+  padding-bottom: 10px;
 
-    @include mobile {
-      padding-bottom: 12px;
-    }
-}
+  @include mobile {
+    padding-bottom: 12px;
+  }
 
-.tab-header__item {
-    padding: 0 0 10px 0;
-    background: none;
-    border: none;
-    opacity: 0.5;
-    color: $text-color;
-    font-family: $roboto;
-    font-size: 20px;
-    line-height: 30px;
-    z-index: 1;
-    cursor: pointer;
-
+  & li {
     &:not(:last-child) {
       margin-right: 46px;
 
@@ -33,43 +22,67 @@
         margin-right: 45px;
       }
     }
-
-    &:not(.active):hover,
-    &:not(.active):focus {
-      opacity: 0.7;
-    }
-
-    @include tablet {
-      font-size: 18px;
-      line-height: 27px;
-    }
-
-    @include mobile {
-      padding: 0;
-      font-size: 16px;
-      line-height: 24px;
-    }
+  }
 }
 
-.tab-header__item.active {
+.tab-header__button {
+  padding-left: 0;
+  padding-right: 0;
+  background: none;
+  border: none;
+  opacity: 0.5;
+  color: $text-color;
+  font-family: $roboto;
+  font-size: 20px;
+  line-height: 30px;
+  z-index: 1;
+  cursor: pointer;
+  outline: none;
+
+  @include tablet {
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  @include mobile {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  &.active {
     position: relative;
     opacity: 1;
 
     &::before {
       content: "";
       position: absolute;
-      bottom: -2px;
+      bottom: -11px;
       width: 100%;
       height: 2px;
       background-color: #d10a42;
 
       @include tablet {
-        bottom: -1px;
+        bottom: -12px;
       }
 
       @include mobile {
         bottom: -14px;
         width: calc(100% + 6px);
       }
-    }    
+    }
+  }
+
+  &:not(.active):hover,
+  &:not(.active):focus {
+    opacity: 0.8;
+  }
+
+  & > span,
+  &:active span,
+  &:focus span {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 }
