--- a/source/sass/blocks/advantage-item.scss
+++ b/source/sass/blocks/advantage-item.scss
@@ -147,7 +147,7 @@
 
     @include mobile {
       margin-right: 0;
-      margin-bottom: 6px;
+      margin-bottom: 5px;
     }
 
     span {
@@ -214,7 +214,7 @@
     margin-bottom: 43px;
     padding: 41px 74px 37px;
     min-width: 320px;
-    max-width: 100%;
+    width: 100%;
 
     &:first-of-type {
       order: -1;
