--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -15,9 +15,8 @@
   }
 
   @include mobile {
-    width: 226px;
-    height: 274px;
-    margin: 0 15px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -49,8 +48,8 @@
     padding-top: 46px;
     padding-right: 30px;
     padding-left: 31px;
-    width: 226px;
-    height: 274px;
+    width: 100%;
+    height: 100%;
   }
 
   &:hover,
@@ -113,13 +112,19 @@
   height: 294px;
   background-color: #b8c1d3;
 
+  @include mobile {
+    height: 100%;
+    min-height: 274px;
+  }
+
   img {
     height: 294px;
     width: 100%;
     object-fit: cover;
 
     @include mobile {
-      height: 274px;
+      height: 100%;
+      min-height: 274px;
     }
   }
 }
