--- a/source/sass/blocks/comment-slider.scss
+++ b/source/sass/blocks/comment-slider.scss
@@ -1,7 +1,7 @@
 .comment-slider__content {
   flex-direction: column;
   align-items: center;
-  padding-top: 38px;
+  padding-top: 0;
   padding-bottom: 120px;
 
   @include tablet {
@@ -10,8 +10,7 @@
   }
 
   @include mobile {
-    padding-top: 15px;
-    padding-bottom: 70px;
+    padding: 15px 47px 70px;
   }
 
   h2 {
@@ -30,6 +29,10 @@
 
 .comment-slider__container {
   position: relative;
+
+  @include mobile {
+    width: 100%;
+  }
 }
 
 .comment-slider__button {
@@ -106,7 +109,7 @@
   }
 
   @include mobile {
-    width: 226px;
+    width: 100%;
   }
 }
 
@@ -121,6 +124,11 @@
       margin-right: 0;
     }
   }
+
+  @include mobile {
+    display: flex;
+    width: 100%;
+  }
 }
 
 .comment-slider__item {
@@ -131,40 +139,20 @@
   padding-left: 170px;
   width: 560px;
   transform: translateX(0);
-  background-color: $text-color;
-  background-image: url("../img/comment-desktop@1x.png");
-  background-repeat: no-repeat;
-  background-position: 62px 62px;
   color: $white;
   font-family: $roboto;
   transition-duration: 0.4s;
+  position: relative;
+  background-color: $text-color;
 
   @include tablet {
     padding-left: 173px;
     padding-right: 55px;
-    background-position: 65px 62px;
   }
 
   @include mobile {
-    width: 226px;
-    padding-top: 48px;
-    padding-right: 25px;
-    padding-bottom: 35px;
-    padding-left: 25px;
-    background-image: url("../img/comment-mobile@1x.png");
-    background-position: 41px 40px;
-  }
-
-  h3 {
-    margin-bottom: 13px;
-    font-size: 20px;
-    line-height: 30px;
-
-    @include mobile {
-      margin-bottom: 24px;
-      padding-left: 100px;
-      line-height: 26px;
-    }
+    width: 100%;
+    padding: 42px 25px 35px;
   }
 
   p {
@@ -173,6 +161,38 @@
 
     @include mobile {
       text-align: center;
+      margin-top: 11px;
+    }
+  }
+}
+
+.comment-slider__avatar {
+  @include mobile {
+    display: flex;
+  }
+
+  h3 {
+    margin-bottom: 13px;
+    font-size: 20px;
+    line-height: 30px;
+
+    @include mobile {
+      margin: 7px 0 13px;
+      line-height: 26px;
+    }
+  }
+
+  img {
+    position: absolute;
+    top: 62px;
+    left: 62px;
+
+    @include mobile {
+      width: 68px;
+      height: 68px;
+      position: static;
+      margin-left: 16px;
+      margin-right: 15px;
     }
   }
 }
