--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -13,15 +13,14 @@
 
   @include mobile {
     flex-direction: column;
-    align-items: center;
-    padding-top: 46px;
+    padding-top: 45px;
     padding-bottom: 50px;
   }
 }
 
 .page-footer__logo {
   margin-right: 276px;
-  padding-top: 4px;
+  padding-top: 2px;
   color: $white;
   font-family: $bebas;
   font-size: 26px;
@@ -37,13 +36,16 @@
   }
 
   @include mobile {
-    position: absolute;
-    left: calc(50% - 145px);
-    margin-right: 0;
-    padding-top: 7px;
-    font-size: 20px;
-    line-height: 20px;
-    letter-spacing: 0.5px;
+    display: none;
+  }
+}
+
+.page-footer__logo-mobile {
+  display: none;
+
+  @include mobile {
+    display: block;
+    text-transform: uppercase;
   }
 }
 
@@ -51,32 +53,34 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding-top: 8px;
+  padding-top: 3px;
   max-width: 550px;
   font-family: $roboto;
   font-size: 14px;
   line-height: 16px;
 
   @include tablet {
-    max-width: 410px;
+    padding-top: 7px;
   }
 
   @include mobile {
-    display: flex;
-    margin-bottom: 37px;
-    max-width: none;
-    width: 290px;
+    display: block;
+    margin-bottom: 17px;
+    width: 100%;
+    column-count: 2;
+    column-gap: 35px;
+    height: 122px;
   }
 
   li {
     margin-bottom: 10px;
 
     @include mobile {
-      width: 90px;
-      margin-bottom: 0;
+      width: calc(50% - 15px);
+      margin-bottom: 23px;
     }
 
-    &:not(:last-child) {
+    &:not(:first-child) {
       margin-right: 40px;
 
       @include tablet {
@@ -85,22 +89,6 @@
 
       @include mobile {
         margin-right: 0;
-      }
-    }
-
-    @include mobile {
-      &:nth-child(2n) {
-        margin-right: 70px;
-      }
-    }
-
-    @include mobile {
-      &:first-child {
-        margin-left: 160px;
-      }
-
-      &:not(:first-child) {
-        margin-top: 24px;
       }
     }
   }
