--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,64 +1,72 @@
 .promo {
   display: flex;
-  background-color: #000145;
-  background-image: url("../img/crossfit-desktop@1x.jpg");
-  background-size: 660px 500px;
-  background-position: right;
-  background-repeat: no-repeat;
+  flex-wrap: nowrap;
   width: 1160px;
 
-  @media (min-resolution: 1.5dppx) {
-    background-image: url("../img/crossfit-desktop@2x.jpg");
-  }
-
   @include tablet {
-    width: 678px;
-    background-image: url("../img/crossfit-tablet@1x.jpg");
-    background-size: 386px 292px;
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/crossfit-tablet@2x.jpg");
-    }
+    width: 100%;
   }
 
   @include mobile {
-    width: 290px;
+    flex-direction: column;
     min-height: 584px;
-    background-color: $promo-bg;
-    background-image: url("../img/crossfit-mobile@1x.jpg");
-    background-size: 290px 292px;
-    background-position: bottom;
+  }
+}
 
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/crossfit-mobile@2x.jpg");
+.promo__title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.promo__img {
+  width: 57%;
+  max-height: 500px;
+  height: 500px;
+  background-color: #000145;
+
+  @include tablet {
+    max-height: 292px;
+  }
+
+  @include mobile {
+    width: 100%;
+    height: auto;
+    max-height: 100%;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    @include mobile {
+      height: auto;
     }
   }
 }
 
 .promo__info {
   display: flex;
-  align-items: flex-start;
-  align-content: flex-start;
-  flex-wrap: wrap;
+  flex-direction: column;
   color: $white;
-  padding: 80px 70px 84px 78px;
-  width: 500px;
+  padding: 81px 78px 85px;
+  width: 43%;
+  max-height: 500px;
   background-color: $promo-bg;
 
   @include tablet {
     padding: 48px 44px 51px;
-    width: 292px;
+    width: calc(100% - 386px);
+    max-height: 292px;
   }
 
   @include mobile {
-    padding-top: 43px;
-    padding-bottom: 343px;
-    background: none;
+    width: 100%;
+    padding: 44px 45px 49px;
   }
 
   h3 {
     margin-bottom: 8px;
-    margin-right: 48px;
     width: 201px;
     font-family: $bebas;
     font-size: 90px;
@@ -68,7 +76,8 @@
     @include tablet {
       margin-bottom: 1px;
       margin-right: 26px;
-      width: 118px;
+      width: auto;
+      min-width: 118px;
       font-size: 52px;
       line-height: 52px;
       letter-spacing: 2px;
@@ -80,7 +89,7 @@
     font-family: $roboto;
     font-size: 18px;
     line-height: 27px;
-    width: 280px;
+    width: auto;
 
     @include tablet {
       margin-bottom: 29px;
@@ -91,7 +100,7 @@
 }
 
 .promo__link {
-  width: 346px;
+  width: 100%;
   height: 71px;
 
   @include tablet {
