--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -1,11 +1,25 @@
+.promotions {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 115px 103px 116px;
+
+  @include tablet {
+    max-width: 1199px;
+    padding: 64px 45px 0;
+  }
+
+  @include mobile {
+    max-width: 767px;
+    padding: 0 15px;
+  }
+}
+
 .promotions__content {
   align-items: center;
   flex-direction: column;
-  padding-top: 120px;
-  padding-bottom: 80px;
 
   @include tablet {
-    padding-top: 100px;
+    padding-top: 36px;
     padding-bottom: 60px;
   }
 
@@ -16,6 +30,7 @@
 
   h2 {
     @include h2;
+    text-align: center;
     margin-bottom: 50px;
 
     @include tablet {
@@ -28,6 +43,7 @@
   display: flex;
 
   @include tablet {
+    width: 100%;
     flex-direction: column;
     align-items: center;
     flex-wrap: nowrap;
@@ -35,34 +51,52 @@
 }
 
 .promotions__main {
-  margin-right: 40px;
-  padding: 41px 326px 32px 45px;
+  display: flex;
   width: 560px;
-  height: 462px;
+  margin-right: 40px;
+
+  @include tablet {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  @include mobile {
+    flex-direction: column;
+  }
+
+  img {
+    width: 280px;
+    height: 100%;
+    object-fit: cover;
+
+    @include tablet {
+      width: 100%;
+    }
+  }
+}
+
+.promotions__text {
+  width: 280px;
+  padding: 44px 45px 32px;
   overflow: hidden;
   background-color: #ed0233;
-  background-image: url("../img/fitness-bunny-desktop@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: right;
 
   @include tablet {
     margin-right: 0;
-    margin-bottom: 30px;
-    padding-right: 440px;
+    // margin-bottom: 30px;
+    // padding-right: 440px;
+    padding-top: 42px;
     padding-bottom: 43px;
-    width: 678px;
-    background-image: url("../img/fitness-bunny-tablet@1x.jpg");
+    width: calc(100% - 399px);
+    // width: 678px;
   }
 
   @include mobile {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 42px 50px 343px;
-    width: 290px;
-    height: auto;
-    background-image: url("../img/fitness-bunny-mobile@1x.jpg");
-    background-position: bottom;
+    padding: 41px 45px 45px;
+    width: 100%;
   }
 
   h3 {
@@ -87,6 +121,10 @@
       }
     }
 
+    @include tablet {
+      margin-bottom: 18px;
+    }
+
     @include mobile {
       text-align: center;
       margin-bottom: 15px;
@@ -94,7 +132,7 @@
   }
 
   p {
-    margin-bottom: 188px;
+    margin-bottom: 186px;
     background-position: right;
     color: $white;
     font-family: $roboto;
@@ -134,22 +172,14 @@
 }
 
 .promotions__list {
-  li:not(:last-child) {
-    margin-bottom: 40px;
-
-    @include tablet {
-      margin-right: 30px;
-      margin-bottom: 0;
-    }
-
-    @include mobile {
-      margin-right: 0;
-      margin-bottom: 30px;
-    }
-  }
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 48.3%;
 
   @include tablet {
-    display: flex;
+    width: 100%;
+    flex-direction: row;
   }
 
   @include mobile {
@@ -158,8 +188,9 @@
 }
 
 .promotion-item {
-  padding: 25px 210px 29px 29px;
-  width: 560px;
+  padding: 27px 29px 31px;
+  margin-bottom: 39px;
+  width: 100%;
   font-family: $roboto;
   color: $text-color;
   border-width: 7px;
@@ -167,17 +198,36 @@
   border-image-source: linear-gradient(143.02deg, #d10a42 0.85%, #00359f 100%);
   border-image-slice: 1;
 
+  &:last-child {
+    margin-bottom: 0;
+
+    @include mobile {
+      h3 {
+        margin-bottom: 10px;
+      }
+    }
+  }
+
   @include tablet {
+    width: calc(50% - 15px);
     padding: 24px 38px 28px 27px;
-    width: 324px;
+    margin-bottom: 0;
+    margin-top: 30px;
+    margin-right: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
   }
 
   @include mobile {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    margin-right: 0;
+    margin-top: 29px;
     padding: 36px 42px 43px 40px;
-    width: 290px;
   }
 
   h3 {
@@ -207,14 +257,6 @@
     @include mobile {
       margin-bottom: 26px;
       text-align: center;
-    }
-  }
-
-  &:last-child {
-    @include mobile {
-      h3 {
-        margin-bottom: 10px;
-      }
     }
   }
 }
